made changes to variables

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,5 +35,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   schema_apac: APAC
-  table_name: customers_unk
+  schema_name: PUBLIC
   region_name: UNK
