Updated source yaml

--- a/models/raw_sources.yml
+++ b/models/raw_sources.yml
@@ -2,6 +2,8 @@ version: 2
 
 sources:
   - name: raw
+    database: '{{target.name}}'
+    schema: raw
     tables:
       - name: customer
       - name: region
