--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,7 +42,8 @@ vars:
 models:
  analytics:
   consumption:
-   +schema: consumption
+    +schema: consumption
+    +materialized: table
   raw:
    +schema: raw
   finance:
