--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,9 @@ vars:
   region_name: UNK
   source_system1: SAP
 
+on-run-end:
+  - "{{ dbt_artifacts.upload_results(results) }}"
+
 models:
  analytics:
   consumption:
